--- a/templates/truckapp/index.html
+++ b/templates/truckapp/index.html
@@ -1,6 +1,6 @@
 {% extends 'truckapp/base.html' %} {% block content %}
 <div class="my" align="center">
-    <h1>Truck DashBoard</h1>
+    <h1>Prototype Truck DashBoard</h1>
     <form method="post">
         {% csrf_token %}
         <table border="2px" align="center">
