--- a/templates/truckapp/base.html
+++ b/templates/truckapp/base.html
@@ -7,7 +7,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous" />
 
     <title>title</title>
+
     <script>
+
         function getLocation() {
             var x = document.getElementById("id_geo_location");
 
@@ -25,6 +27,11 @@
             x.value = position.coords.latitude + "," + position.coords.longitude;
         }
     </script>
+    <style>
+        body{
+            background:papayawhip;
+        }
+    </style>
 </head>
 
 <body>
