--- a/templates/truckapp/home.html
+++ b/templates/truckapp/home.html
@@ -1,5 +1,5 @@
 {% extends 'truckapp/base.html' %} {% block content %}
-<h1 align="center">Truck Home</h1>
+<h1 align="center">Prototype Food Truck </h1>
     {% if error %}
     <h1>{{error}}</h1>
     {% endif %}
@@ -7,16 +7,20 @@
         <input type="search" name="search" />
         <button type="submit">Search</button>
         <a href="{% url 'home' %}">reset search filter</a>
-    </form><hr>
+    </form>
+
+<hr>
         {% for add in truck_list %}
         <ul>
             <li>Truck No:{{add.truck_name}}</li>
-            <li>Foods Available:{{add.food_type}}</li>
-            <li>Truck Address:{{add.truck_location}}</li>
-            <li>Truck Timing:{{add.truck_opening_time}}-{{add.truck_closing_time}}</li>
-            <li>
+            <p>Foods Available:{{add.food_type}}</p>
+            <p>Truck Address:{{add.truck_location}}</p>
+            <p>Truck Timing:{{add.truck_opening_time}}-{{add.truck_closing_time}}</p>
+            <p>Truck status:</p>
+<!--            <p>Truck Staus:{{status}}<p>-->
+
                 <iframe src="https://maps.google.com/maps?q={{add.geo_location}}&hl=en;z=14&amp;output=embed"></iframe>
-            </li>
+            </p>
         </ul><hr>
 
         {% endfor %}
